# rust-dioxus-template

./: .gitignore  Cargo.toml  README.md  devenv.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/server/: Cargo.toml
crates/server/src/: main.rs  telemetry.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/web/: Cargo.toml  Dioxus.toml
crates/web/src/: main.rs
